#3 Setup Recipe Card UI/UX. Fix Header, Main, and Footer alignments

--- a/src/app/recipes/pages/recipes/recipes.component.scss
+++ b/src/app/recipes/pages/recipes/recipes.component.scss
@@ -1,2 +1,11 @@
-:host {
+.recipes {
+
+  &__search {
+    margin-bottom: 4rem;
+  }
+
+  &__list {
+
+  }
+
 }
