--- a/src/assets/styles/layout/_footer.scss
+++ b/src/assets/styles/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   color: $color-brown;
-  height: 5.5rem;
+  font-size: 0.8rem;
 
   %highlight {
     color: darken($color-brown, 5%);
