--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -1,5 +1,4 @@
 .header {
-  height: 6rem;
 
   &__logo {
     background-color: red;
